# cmake-learn

./: CMakeLists.txt
inc/: bar.h  foo.h
src/: bar.c  foo.c  main.c
